name:                HaskellNet-SSL
synopsis:            Helpers to connect to SSL/TLS mail servers with HaskellNet
version:             0.3.4.2
description:         This package ties together the HaskellNet and connection
                     packages to make it easy to open IMAP and SMTP connections
                     over SSL.
homepage:            https://github.com/dpwright/HaskellNet-SSL
license:             BSD3
license-file:        LICENSE
author:              Daniel P. Wright
maintainer:          Leza M. Lutonda <lemol-c@outlook.com>, dani@dpwright.com
copyright:           (c) 2013 Daniel P. Wright
category:            Network
build-type:          Simple
cabal-version:       >=1.8
data-files:          README.md

flag NoUpperBounds
  Description: Removes upper bounds from all packages
  Default: False

flag network-bsd
   description: Get Network.BSD from the network-bsd package
   default: True

source-repository head
  type:     git
  location: git://github.com/dpwright/HaskellNet-SSL.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Network.HaskellNet.IMAP.SSL
                       Network.HaskellNet.POP3.SSL
                       Network.HaskellNet.SMTP.SSL
                       Network.HaskellNet.SSL
  other-modules:       Network.HaskellNet.SSL.Internal
  if flag(NoUpperBounds)
    build-depends:     base >= 4,
                       HaskellNet >= 0.3,
                       tls >= 1.2,
                       connection >= 0.2.7,
                       bytestring,
                       data-default
  else
    build-depends:     base >= 4 && < 5,
                       HaskellNet >= 0.6,
                       tls >= 1.2 && < 1.6,
                       connection >= 0.2.7 && < 0.4,
                       bytestring,
                       data-default
  if flag(network-bsd)
    build-depends:     network >= 3.0,
                       network-bsd >= 2.7
  else
    build-depends:     network >= 2.4 && < 3.0
