name:                HaskellNet-SSL
synopsis:            Helpers to connect to SSL/TLS mail servers with HaskellNet
version:             0.3.4.4
description:         This package ties together the HaskellNet and connection
                     packages to make it easy to open IMAP and SMTP connections
                     over SSL.
homepage:            https://github.com/dpwright/HaskellNet-SSL
license:             BSD3
license-file:        LICENSE
author:              Daniel P. Wright
maintainer:          Leza M. Lutonda <lemol-c@outlook.com>, dani@dpwright.com
copyright:           (c) 2013 Daniel P. Wright
category:            Network
build-type:          Simple
cabal-version:       >=1.10
data-files:          README.md

flag network-bsd
   description: Get Network.BSD from the network-bsd package
   default: True

source-repository head
  type:     git
  location: git://github.com/dpwright/HaskellNet-SSL.git

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
  exposed-modules:     Network.HaskellNet.IMAP.SSL
                       Network.HaskellNet.POP3.SSL
                       Network.HaskellNet.SMTP.SSL
                       Network.HaskellNet.SSL
  other-modules:       Network.HaskellNet.SSL.Internal
  build-depends:       base >= 4 && < 5,
                       HaskellNet >= 0.3 && < 0.7,
                       crypton-connection >= 0.3.1,
                       bytestring >= 0.9 && < 0.12,
                       data-default >= 0.2 && < 0.8
  if flag(network-bsd)
    build-depends:     network >= 3.0 && < 3.2,
                       network-bsd >= 2.7 && < 2.9
  else
    build-depends:     network >= 2.4 && < 3.0
